set min max for navigation footer to avoid jumping

--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@ header > div {
 nav {
   height: 60pt;
   min-height: 60pt;
-  max-height: 70pt;
+  max-height: 60pt;
   background-color: whitesmoke;
 
 }
